[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"]}
tokio = { version = "1.4", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
bytes = "1.0"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors"] }